fix: add padding to move content hidden by header

--- a/php/src/public/css/global.css
+++ b/php/src/public/css/global.css
@@ -17,3 +17,7 @@
 body {
   background-color: #f5f5f5;
 }
+
+main {
+  padding-top: 70px;
+}
